[tool.poetry]
name = "lds"
version = "0.1.0"
description = ""
authors = ["Paul-antoineLeTolguenec <paul-antoine.le_tolguenec@ensta-bretagne.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
absl-py = "1.4.0"
aiosignal = "1.3.1"
ale-py = "0.8.1"
anyio = "3.7.1"
appdirs = "1.4.4"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asttokens = "2.2.1"
async-lru = "2.0.4"
attrs = "23.1.0"
autorom = "0.4.2"
autorom-accept-rom-license = "0.6.1"
babel = "2.12.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
build = "1.2.1"
cachecontrol = "0.14.0"
cachetools = "5.3.1"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cleo = "2.1.0"
click = "8.1.3"
cloudpickle = "2.2.1"
cmake = "3.26.4"
comm = "0.1.4"
contourpy = "1.0.7"
crashtest = "0.4.1"
cryptography = "42.0.5"
cycler = "0.11.0"
cython = "0.29.36"
dash = "2.16.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
debugpy = "1.6.7.post1"
decorator = "4.4.2"
defusedxml = "0.7.1"
distlib = "0.3.8"
dm-env = "1.6"
dm-tree = "0.1.8"
docker-pycreds = "0.4.0"
docstring-parser = "0.16"
dulwich = "0.21.7"
etils = "1.4.1"
eval-type-backport = "0.1.3"
exceptiongroup = "1.1.3"
executing = "1.2.0"
farama-notifications = "0.0.4"
fasteners = "0.19"
fastjsonschema = "2.18.0"
filelock = "3.13.4"
flask = "2.2.5"
flask-cors = "4.0.0"
fonttools = "4.39.4"
fqdn = "1.5.1"
frozenlist = "1.3.3"
gitdb = "4.0.10"
gitpython = "3.1.31"
glfw = "2.6.2"
google-auth = "2.19.1"
google-auth-oauthlib = "1.0.0"
grpcio = "1.51.3"
gym-notices = "0.0.8"
gymnasium = "0.29.1"
idna = "3.4"
imageio = "2.31.5"
imageio-ffmpeg = "0.4.9"
importlib-metadata = "4.13.0"
importlib-resources = "5.12.0"
installer = "0.7.0"
ipykernel = "6.25.1"
ipython = "8.14.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.0"
isoduration = "20.11.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.4.0"
jedi = "0.19.0"
jeepney = "0.8.0"
jinja2 = "3.0.3"
joblib = "1.3.2"
json5 = "0.9.14"
jsonpointer = "2.4"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "24.3.1"
kiwisolver = "1.4.4"
labmaze = "1.0.6"
lit = "16.0.5.post0"
lxml = "4.9.3"
markdown = "3.4.3"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
mistune = "3.0.1"
ml-dtypes = "0.2.0"
more-itertools = "10.2.0"
moviepy = "1.0.3"
mpmath = "1.3.0"
msgpack = "1.0.5"
nbclient = "0.8.0"
nbconvert = "7.7.4"
nbformat = "5.9.2"
nest-asyncio = "1.5.7"
networkx = "3.1"
notebook = "7.0.2"
notebook-shim = "0.2.3"
numpy = "1.26.0"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cublas-cu12 = "12.2.5.6"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-cupti-cu12 = "12.2.142"
nvidia-cuda-nvcc-cu11 = "11.8.89"
nvidia-cuda-nvcc-cu12 = "12.2.140"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-nvrtc-cu12 = "12.2.140"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cuda-runtime-cu12 = "12.2.140"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cudnn-cu12 = "8.9.4.25"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-cufft-cu12 = "11.0.8.103"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusolver-cu12 = "11.5.2.141"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-cusparse-cu12 = "12.1.2.141"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu11 = "11.7.91"
oauthlib = "3.2.2"
opt-einsum = "3.3.0"
overrides = "7.4.0"
packaging = "23.1"
pandas = "2.0.2"
pandocfilters = "1.5.0"
parso = "0.8.3"
pathtools = "0.1.2"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.5.0"
pkginfo = "1.10.0"
platformdirs = "3.10.0"
plotly = "5.20.0"
poetry-core = "1.9.0"
proglog = "0.1.10"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protobuf = "4.23.2"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pygments = "2.16.1"
pyopengl = "3.1.7"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
pytinyrenderer = "0.0.14"
pytz = "2023.3"
pyyaml = "6.0"
pyzmq = "25.1.1"
qtconsole = "5.4.3"
qtpy = "2.3.1"
rapidfuzz = "3.8.1"
referencing = "0.30.2"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.5.2"
rpds-py = "0.9.2"
rsa = "4.9"
scikit-learn = "1.3.0"
seaborn = "0.13.0"
secretstorage = "3.3.3"
send2trash = "1.8.2"
sentry-sdk = "1.25.1"
setproctitle = "1.3.2"
shellingham = "1.5.4"
shtab = "1.7.1"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.3.0"
soupsieve = "2.4.1"
stable-baselines3 = "2.3.0"
stack-data = "0.6.2"
sympy = "1.12"
tenacity = "8.2.3"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.0"
tensorboardx = "2.6.2.2"
terminado = "0.17.1"
threadpoolctl = "3.2.0"
tinycss2 = "1.2.1"
tomli = "2.0.1"
tomlkit = "0.12.4"
toolz = "0.12.0"
torch = "2.0.1"
torchaudio = "2.0.2"
torchvision = "0.15.2"
tornado = "6.3.3"
tqdm = "4.65.0"
traitlets = "5.9.0"
trimesh = "3.9.35"
triton = "2.0.0"
trove-classifiers = "2024.4.10"
typing-extensions = "4.11.0"
tyro = "0.8.3"
tzdata = "2023.3"
uri-template = "1.3.0"
urllib3 = "1.26.16"
virtualenv = "20.25.3"
wandb = "0.15.4"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.2"
werkzeug = "2.3.6"
widgetsnbextension = "4.0.8"
zipp = "3.15.0"
gym = "0.26.0"
gym-robotics = "1.0.1"
mujoco = "2.2.2"
mujoco-py = "^2.1.2.14"
colorednoise = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
